[tool.poetry]
name = "vadan-topography-wyko"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
pandas = "^2.2.3"
brukeropus = "^1.1.0"
surfalize = "^0.12.1"
gurobipy = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
